# BiteMe

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: conda-env.mdc
biteme/: README.md  cli.py  config.py  pyproject.toml
biteme/context/: base.py  direct.py  factory.py  rag.py
biteme/graph/: agent_runner.py  graph.py  memory.py  nodes.py  prompts.py  state.py
biteme/indexing/: pipeline.py
biteme/session/: manager.py
biteme/src/: cli.py  config.py  orchestrator.py
biteme/src/agents/: __init__.py  answerer.py  base.py  planner.py  questioner.py  summarizer.py
biteme/src/input/: file_reader.py  processor.py
biteme/src/memory/: private.py  shared.py
biteme/tests/: tdd_evidence_task1.md  test_cli_integration.py  test_input_processor.py  test_interview_mode.py  test_orchestrator_flow.py  test_planner_node.py
biteme/tools/: __init__.py  filesystem.py  github.py  web.py
docs/: 2026-04-20-biteme-dual-agent-design.md  roadmap.md
docs/superpowers/plans/: 2026-04-21-biteme-langgraph-implementation.md  2026-05-10-biteme-dual-agent.md  2026-05-17-planner-agent.md  (+7 more)
tests/: conftest.py  test_cli.py  test_config.py  test_context_direct.py  test_context_factory.py  test_context_rag.py  test_graph_nodes.py  test_hitl_integration.py  test_indexing.py  test_memory.py  test_memory_benchmark.py  test_memory_benchmark_loader.py  test_memory_eval.py  test_memory_node.py  test_memory_recall.py  test_session_manager.py  test_tools_filesystem.py  test_tools_github.py  test_tools_web.py
tests/benchmarks/: memory_loader.py  memory_scorer.py
(+15 files in other folders)
