[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biteme"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "lancedb>=0.13",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14"]

[project.scripts]
biteme = "biteme.cli:app"
