[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biteme"
version = "0.1.0"
description = "LangGraph-based dual-agent project understanding assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "pydantic",
    "rich",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
